tests/rosetta/transpiler/C/2048.c
// Generated by Mochi 0.10.32 on 2025-07-23 12:35 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int _now(void) {
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (int)(ts.tv_sec * 1000 + ts.tv_nsec / 1000000);
}

static char* _input(void) {
    char buf[1024];
    if (!fgets(buf, sizeof(buf), stdin)) return strdup("");
    size_t len = strlen(buf);
    if (len > 0 && buf[len-1] == '\n') buf[len-1] = 0;
    return strdup(buf);
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;
typedef struct Anon3 Anon3;

struct Anon1 {
    int[] board;
    int full;
};

struct Anon2 {
    int[] row;
    int gain;
};

struct Anon3 {
    int[] board;
    int score;
    int moved;
};

int SIZE = 4;
int score = 0;

int * newBoard() {
    int *b = NULL;
    size_t b_len = 0;
    int y = 0;
    while (y < SIZE) {
        int *row = NULL;
        size_t row_len = 0;
        int x = 0;
        while (x < SIZE) {
            row = list_append_int(row, &row_len, 0);
            x = x + 1;
        }
        b = list_append_int(b, &b_len, row);
        y = y + 1;
    }
    return b;
}

Anon1 spawnTile(int * b) {
    int *empty = NULL;
    size_t empty_len = 0;
    int y = 0;
    while (y < SIZE) {
        int x = 0;
        while (x < SIZE) {
            if (b[y][x] == 0) {
                empty = list_append_int(empty, &empty_len, { x, y });
            }
            x = x + 1;
        }
        y = y + 1;
    }
    if (empty_len == 0) {
        return (Anon1){.board = b, .full = 1};
    }
    int idx = _now() % empty_len;
    int cell = empty[idx];
    int val = 4;
    if ((_now() % 10) < 9) {
        val = 2;
    }
    b[cell[1]][cell[0]] = val;
    return (Anon1){.board = b, .full = empty_len == 1};
}

const char* pad(int n) {
    const char* s = str_int(n);
    int pad = 4 - strlen(s);
    int i = 0;
    const char* out = "";
    while (i < pad) {
        out = str_concat(out, " ");
        i = i + 1;
    }
    return str_concat(out, s);
}

int draw(int * b, int score) {
    puts(str_concat("Score: ", str_int(score)));
    int y = 0;
    while (y < SIZE) {
        puts("+----+----+----+----+");
        const char* line = "|";
        int x = 0;
        while (x < SIZE) {
            int v = b[y][x];
            if (v == 0) {
                line = str_concat(line, "    |");
            } else {
                line = str_concat(str_concat(line, pad(v)), "|");
            }
            x = x + 1;
        }
        puts(line);
        y = y + 1;
    }
    puts("+----+----+----+----+");
    puts("W=Up S=Down A=Left D=Right Q=Quit");
}

int * reverseRow(int * r) {
    int *out = NULL;
    size_t out_len = 0;
    int i = r_len - 1;
    while (i >= 0) {
        out = list_append_int(out, &out_len, r[i]);
        i = i - 1;
    }
    return out;
}

Anon2 slideLeft(int * row) {
    int *xs = NULL;
    size_t xs_len = 0;
    int i = 0;
    while (i < row_len) {
        if (row[i] != 0) {
            xs = list_append_int(xs, &xs_len, row[i]);
        }
        i = i + 1;
    }
    int *res = NULL;
    size_t res_len = 0;
    int gain = 0;
    i = 0;
    while (i < xs_len) {
        if (((i + 1) < xs_len) && (xs[i] == xs[i + 1])) {
            int v = xs[i] * 2;
            gain = gain + v;
            res = list_append_int(res, &res_len, v);
            i = i + 2;
        } else {
            res = list_append_int(res, &res_len, xs[i]);
            i = i + 1;
        }
    }
    while (res_len < SIZE) {
        res = list_append_int(res, &res_len, 0);
    }
    return (Anon2){.row = res, .gain = gain};
}

Anon3 moveLeft(int * b, int score) {
    int moved = 0;
    int y = 0;
    while (y < SIZE) {
        Anon2 r = slideLeft(b[y]);
        int *new = NULL;
        size_t new_len = 0;
        score = score + r.gain;
        int x = 0;
        while (x < SIZE) {
            if (b[y][x] != new[x]) {
                moved = 1;
            }
            b[y][x] = new[x];
            x = x + 1;
        }
        y = y + 1;
    }
    return (Anon3){.board = b, .score = score, .moved = moved};
}

Anon3 moveRight(int * b, int score) {
    int moved = 0;
    int y = 0;
    while (y < SIZE) {
        int *rev = NULL;
        size_t rev_len = 0;
        Anon2 r = slideLeft(rev);
        rev = r.row;
        score = score + r.gain;
        rev = reverseRow(rev);
        int x = 0;
        while (x < SIZE) {
            if (b[y][x] != rev[x]) {
                moved = 1;
            }
            b[y][x] = rev[x];
            x = x + 1;
        }
        y = y + 1;
    }
    return (Anon3){.board = b, .score = score, .moved = moved};
}

int * getCol(int * b, int x) {
    int *col = NULL;
    size_t col_len = 0;
    int y = 0;
    while (y < SIZE) {
        col = list_append_int(col, &col_len, b[y][x]);
        y = y + 1;
    }
    return col;
}

int setCol(int * b, int x, int * col) {
    int y = 0;
    while (y < SIZE) {
        b[y][x] = col[y];
        y = y + 1;
    }
}

Anon3 moveUp(int * b, int score) {
    int moved = 0;
    int x = 0;
    while (x < SIZE) {
        int *col = NULL;
        size_t col_len = 0;
        Anon2 r = slideLeft(col);
        int *new = NULL;
        size_t new_len = 0;
        score = score + r.gain;
        int y = 0;
        while (y < SIZE) {
            if (b[y][x] != new[y]) {
                moved = 1;
            }
            b[y][x] = new[y];
            y = y + 1;
        }
        x = x + 1;
    }
    return (Anon3){.board = b, .score = score, .moved = moved};
}

Anon3 moveDown(int * b, int score) {
    int moved = 0;
    int x = 0;
    while (x < SIZE) {
        int *col = NULL;
        size_t col_len = 0;
        Anon2 r = slideLeft(col);
        col = r.row;
        score = score + r.gain;
        col = reverseRow(col);
        int y = 0;
        while (y < SIZE) {
            if (b[y][x] != col[y]) {
                moved = 1;
            }
            b[y][x] = col[y];
            y = y + 1;
        }
        x = x + 1;
    }
    return (Anon3){.board = b, .score = score, .moved = moved};
}

int hasMoves(int * b) {
    int y = 0;
    while (y < SIZE) {
        int x = 0;
        while (x < SIZE) {
            if (b[y][x] == 0) {
                return 1;
            }
            if (((x + 1) < SIZE) && (b[y][x] == b[y][x + 1])) {
                return 1;
            }
            if (((y + 1) < SIZE) && (b[y][x] == b[y + 1][x])) {
                return 1;
            }
            x = x + 1;
        }
        y = y + 1;
    }
    return 0;
}

int has2048(int * b) {
    int y = 0;
    while (y < SIZE) {
        int x = 0;
        while (x < SIZE) {
            if (b[y][x] >= 2048) {
                return 1;
            }
            x = x + 1;
        }
        y = y + 1;
    }
    return 0;
}

int main(void) {
    int *board = NULL;
    size_t board_len = 0;
    Anon1 r = spawnTile(board);
    board = r.board;
    int full = r.full;
    r = spawnTile(board);
    board = r.board;
    full = r.full;
    while (1) {
        puts("Move: ");
        const char* cmd = _input();
        int moved = 0;
        if ((strcmp(cmd, "a") == 0) || (strcmp(cmd, "A") == 0)) {
            Anon3 m = moveLeft(board, score);
            board = m.board;
            score = m.score;
            moved = m.moved;
        }
        if ((strcmp(cmd, "d") == 0) || (strcmp(cmd, "D") == 0)) {
            Anon3 m = moveRight(board, score);
            board = m.board;
            score = m.score;
            moved = m.moved;
        }
        if ((strcmp(cmd, "w") == 0) || (strcmp(cmd, "W") == 0)) {
            Anon3 m = moveUp(board, score);
            board = m.board;
            score = m.score;
            moved = m.moved;
        }
        if ((strcmp(cmd, "s") == 0) || (strcmp(cmd, "S") == 0)) {
            Anon3 m = moveDown(board, score);
            board = m.board;
            score = m.score;
            moved = m.moved;
        }
        if ((strcmp(cmd, "q") == 0) || (strcmp(cmd, "Q") == 0)) {
            break;
        }
        if (moved) {
            Anon1 r2 = spawnTile(board);
            board = r2.board;
            full = r2.full;
            if (full && !(hasMoves(board))) {
                puts("Game Over");
                break;
            }
        }
        if (has2048(board)) {
            puts("You win!");
            break;
        }
        if (!(hasMoves(board))) {
            puts("Game Over");
            break;
        }
    }
    return 0;
}
